# pythonProject

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
src/: category.py  inventory.py  main.py  models.py  product.py
tests/: test_category.py  test_inventory.py  test_main.py  test_main_functionality.py  test_models.py  test_product.py
